tests/compile_fail/borrow_mut/union.rs
#[derive(derive_more::BorrowMut)]
union Foo {
    bar: i32,
}

fn main() {}
